--- a/style.css
+++ b/style.css
@@ -71,16 +71,16 @@ footer {
 background-size: cover; 
 }
 
-#www {
-    opacity: 0.7;
-}
 
 .card {
-    opacity: 0.8;
     box-shadow: 0 0 10px 2px;
 }
 
-#projects {
+.projects {
     background-color: #f6f3e4;
    
+}
+
+.badge {
+    padding: 0.85em 0.4em;
 }
