--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
-/* * {
+* {
   border: thin red solid;
-} */
+}
 
 body {
   padding-top: 40px;
@@ -32,7 +32,7 @@ body {
 }
 
 .name,
-span {
+.title {
   color: #001858;
   display: flex;
   justify-content: center;
