--- a/style.css
+++ b/style.css
@@ -85,7 +85,8 @@ body {
 .projcard-container {
   margin-left: auto;
   margin-right: auto;
-  width: 1000px;
+  width: 800px;
+  /* max-width: 640px; */
 }
 .projcard {
   position: relative;
