--- a/style.css
+++ b/style.css
@@ -70,3 +70,14 @@ body {
   border-radius: 48px;
   object-fit: cover;
 }
+
+p {
+  text-align: center;
+  margin-top: 5px;
+  margin-bottom: -1rem;
+}
+
+.skill-icons {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 14px;
+}
